load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "overdoll/applications/pox",
    visibility = ["//visibility:public"],
    deps = [
        "//applications/pox/src/server:go_default_library",
        "//applications/pox/src/services:go_default_library",
        "//libraries/aws:go_default_library",
        "//libraries/bootstrap:go_default_library",
        "//libraries/events:go_default_library",
    ],
)
