load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

web_sources = glob(["database/**"]) + ["config.toml"]

exports_files(["config.toml"])

go_library(
    name = "sting_lib",
    srcs = ["main.go"],
    data = web_sources,
    importpath = "overdoll/applications/sting",
    visibility = ["//visibility:private"],
    deps = [
        "//applications/sting/proto:v1_go_proto",
        "//applications/sting/src/ports",
        "//applications/sting/src/service",
        "//libraries/bootstrap",
        "//libraries/clients",
        "//libraries/commands",
        "//libraries/config",
        "//libraries/graphql/relay",
        "@com_github_99designs_gqlgen//api",
        "@com_github_99designs_gqlgen//codegen/config",
        "@com_github_99designs_gqlgen//plugin/federation",
        "@com_github_99designs_gqlgen//plugin/modelgen",
        "@com_github_99designs_gqlgen//plugin/resolvergen",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "sting",
    embed = [":sting_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "local-image",
    base = "@go_base_image//image",
    data = [".env"],
    embed = [":sting_lib"],
    importpath = "overdoll/applications/sting",
)

go_image(
    name = "image",
    base = "@go_base_image//image",
    embed = [":sting_lib"],
    importpath = "overdoll/applications/sting",
)

container_push(
    name = "publish-testing",
    format = "Docker",
    image = ":image",
    registry = "$(CONTAINER_REGISTRY)",
    repository = "sting/dev",
    tag = "$(CONTAINER_TAG)",
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":image",
    registry = "$(CONTAINER_REGISTRY)",
    repository = "sting",
    skip_unchanged_digest = True,
    tag = "$(CONTAINER_TAG)",
)
