load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = [
        "bootstrap.go",
        "database.go",
        "grpc.go",
        "http.go",
        "worker.go",
    ],
    importpath = "overdoll/libraries/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/helpers",
        "@com_github_gocql_gocql//:gocql",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_scylladb_gocqlx_v2//:gocqlx",
        "@io_temporal_go_sdk//worker",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)
