load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootstrap",
    srcs = [
        "aws.go",
        "bootstrap.go",
        "cassandra_query_observer.go",
        "database.go",
        "elasticsearch.go",
        "grpc.go",
        "http.go",
        "redis.go",
        "worker.go",
    ],
    importpath = "overdoll/libraries/bootstrap",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/passport",
        "//libraries/support",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_gocql_gocql//:gocql",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tags",
        "@com_github_olivere_elastic_v7//:elastic",
        "@com_github_scylladb_gocqlx_v2//:gocqlx",
        "@com_github_spf13_viper//:viper",
        "@io_temporal_go_sdk//worker",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)
