load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cache",
    srcs = [
        "cache.go",
        "create.go",
        "delete_index.go",
        "index.go",
        "list.go",
        "local_alias.go",
        "register.go",
        "registry.go",
        "swap.go",
    ],
    importpath = "overdoll/libraries/cache",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/bootstrap",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_tidwall_gjson//:gjson",
        "@org_uber_go_zap//:zap",
    ],
)
