load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["eva.go"],
    importpath = "overdoll/libraries/client",
    visibility = ["//visibility:public"],
    deps = [
        "//applications/eva/proto:v1_go_proto",
        "@com_github_grpc_ecosystem_go_grpc_middleware//retry:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
