load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clients",
    srcs = [
        "carrier.go",
        "eva.go",
        "hades.go",
        "loader.go",
        "parley.go",
        "ringer.go",
        "stella.go",
        "sting.go",
        "temporal.go",
    ],
    importpath = "overdoll/libraries/clients",
    visibility = ["//visibility:public"],
    deps = [
        "//applications/carrier/proto:v1_go_proto",
        "//applications/eva/proto:v1_go_proto",
        "//applications/hades/proto:v1_go_proto",
        "//applications/loader/proto:v1_go_proto",
        "//applications/parley/proto:v1_go_proto",
        "//applications/ringer/proto:v1_go_proto",
        "//applications/stella/proto:v1_go_proto",
        "//applications/sting/proto:v1_go_proto",
        "//libraries/passport",
        "//libraries/sentry_support",
        "//libraries/temporal_support",
        "@com_github_grpc_ecosystem_go_grpc_middleware//retry",
        "@io_temporal_go_sdk//client",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_uber_go_zap//:zap",
    ],
)
