load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "clients",
    srcs = [
        "carrier.go",
        "eva.go",
        "hades.go",
        "loader.go",
        "parley.go",
        "resource_callback.go",
        "ringer.go",
        "sting.go",
        "temporal.go",
    ],
    importpath = "overdoll/libraries/clients",
    visibility = ["//visibility:public"],
    deps = [
        "//applications/carrier/proto:v1_go_proto",
        "//applications/eva/proto:v1_go_proto",
        "//applications/hades/proto:v1_go_proto",
        "//applications/loader/proto:v1_go_proto",
        "//applications/parley/proto:v1_go_proto",
        "//applications/ringer/proto:v1_go_proto",
        "//applications/sting/proto:v1_go_proto",
        "//libraries/errors",
        "//libraries/passport",
        "//libraries/resource/proto:libraries_go_proto",
        "//libraries/sentry_support",
        "//libraries/temporal_support",
        "//libraries/zap_support/zap_adapters",
        "@com_github_grpc_ecosystem_go_grpc_middleware//retry",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_sdk//workflow",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_uber_go_zap//:zap",
    ],
)
