load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "commands",
    srcs = [
        "db.go",
        "migrate.go",
        "seed.go",
    ],
    importpath = "overdoll/libraries/commands",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/bootstrap",
        "@com_github_gocql_gocql//:gocql",
        "@com_github_scylladb_gocqlx_v2//migrate",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
