load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "overdoll/libraries/config",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/helpers:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
