load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "overdoll/libraries/config",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/helpers",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_spf13_viper//:viper",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
