load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cookies.go"],
    importpath = "overdoll/libraries/cookies",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/helpers:go_default_library",
        "@com_github_gorilla_securecookie//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cookies_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//libraries/helpers:go_default_library",
        "@com_github_bmizerany_assert//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
