load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "elasticsearch",
    srcs = [
        "bulk.go",
        "connection.go",
        "index.go",
        "search.go",
    ],
    importpath = "overdoll/libraries/elasticsearch",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_elastic_go_elasticsearch_v7//:go-elasticsearch",
        "@com_github_elastic_go_elasticsearch_v7//esapi",
        "@com_github_elastic_go_elasticsearch_v7//esutil",
    ],
)
