load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphql",
    srcs = [
        "URI.go",
        "dataloader.go",
        "new.go",
        "preloads.go",
    ],
    importpath = "overdoll/libraries/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/helpers",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/handler/apollotracing",
        "@com_github_99designs_gqlgen//graphql/handler/extension",
        "@com_github_99designs_gqlgen//graphql/handler/lru",
        "@com_github_99designs_gqlgen//graphql/handler/transport",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_vektah_gqlparser_v2//gqlerror",
        "@org_uber_go_zap//:zap",
    ],
)
