load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graphql",
    srcs = [
        "currency.go",
        "dataloader.go",
        "date.go",
        "locale.go",
        "media.go",
        "new.go",
        "resource.go",
        "uri.go",
    ],
    importpath = "overdoll/libraries/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//libraries/errors/apperror",
        "//libraries/graphql/relay",
        "//libraries/media",
        "//libraries/media/proto:libraries_go_proto",
        "//libraries/money",
        "//libraries/sentry_support",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_99designs_gqlgen//graphql/handler",
        "@com_github_99designs_gqlgen//graphql/handler/apollotracing",
        "@com_github_99designs_gqlgen//graphql/handler/extension",
        "@com_github_99designs_gqlgen//graphql/handler/lru",
        "@com_github_99designs_gqlgen//graphql/handler/transport",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_graph_gophers_dataloader_v7//:dataloader",
    ],
)
