load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "directory.go",
        "gin.go",
        "preloads.go",
    ],
    importpath = "overdoll/libraries/helpers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_99designs_gqlgen//graphql:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
